--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <nav class="classy-navbar justify-content-between" id="dreamNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="index-2.html"><img draggable="false" src="img/core-img/logoindexsale75x75.png" alt="logo"> In-Dex.</a>
+                    <a class="nav-brand" href="index-2.html"><img draggable="false" src="img/core-img/logoindexsale75x75.png" alt="logo"> In-Dex Sale</a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -623,7 +623,7 @@
                             <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
                         </div>
                         <h2 class="wow fadeInUp" data-wow-delay="0.3s">Frequently Asked Questions</h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s" style="margin-left:0">In-Dex Sale Coin is a utility based token. In-dex Sale coin holders makes suggestions and vote on ecossystem, and possibility to enter on launching projects.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s" style="margin-left:0">In-Dex Sale Coin is a utility based token.  Sale coin holders makes suggestions and vote on ecossystem, and possibility to enter on launching projects.</p>
                     </div>
 
                     <div class="dream-faq-area">
