--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,9 @@
                                 <div class="footer-logo">
                                     <a href="#"><img draggable="false" src="img/core-img/logo.png" alt="logo"> Coinland.</a>
                                 </div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ducimus voluptatibus neque illo id repellat quisquam? Autem expedita earum quae laborum ipsum ad, a eaque officiis eligendi blanditiis odio necessitatibus.</p>
+                                <p>In-Dex Sale Token is a utility based token. In-Dex Sale holders makes suggestions and vote on all roadmap.
+
+</p>
                             </div>
                             <!-- Social Icon -->
                             <div class="footer-social-info wow fadeInUp" data-wow-delay="0.4s">
