--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
                             <!-- Copywrite -->
                             <div class="copywrite_text wow fadeInUp" data-wow-delay="0.2s">
                                 <div class="footer-logo">
-                                    <a href="#"><img draggable="false" src="img/core-img/logo.png" alt="logo"> Coinland.</a>
+                                    <a href="#"><img draggable="false" src="img/core-img/logo.png" alt="logo"> In-Dex Sale</a>
                                 </div>
                                 <p>In-Dex Sale Token is a utility based token. In-Dex Sale holders makes suggestions and vote on all roadmap.
 
