--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         <img draggable="false" src="img/svg/about1.svg" class="img-responsive center-block" alt="">
                         <!-- client meta -->
                         <div class="growing-company text-center mt-30 wow fadeInUp" data-wow-delay="0.8s">
-                            <p>"></span></p>
+                            <p></span></p>
                         </div>
                     </div>
                 </div>
