--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
                             </div>
                             <!-- Content Info -->
                             <div class="contact_info text-center wow fadeInUp" data-wow-delay="0.3s">
-                                <h5></h5>
+                                <h5>PRIVACY & TOS</h5>
                                 <a href=""><p>Privacy Policy</p></a>
                                 <a href=""><p></p></a>
                                 <a href=""><p></p></a>
