--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                                        <span class="pull-right">Token Hardcap</span>
                                     </div>
                                     <div class="text-center">
-                                        <a href="#" class="button mt-30">Buy More Tokens</a>
+                                        <a href="https://www.pinksale.finance/launchpad/0x1907c2fc23616B0aCA9A9836ff7852b4E746274F?chain=BSC" class="button mt-30">Buy More Tokens</a>
                                     </div>
                                 </div>
                                 
